--- a/apps/site/src/_pages/docs/4_spec/00_index.mdx
+++ b/apps/site/src/_pages/docs/4_spec/00_index.mdx
@@ -25,16 +25,16 @@ It defines how structured data is passed between blocks and embedding applicatio
 
 ### Structure
 
-The Block Protocol is split into a core specification and service specifications.
+The Block Protocol is split into a core specification and module specifications.
 
-The [core specification](https://blockprotocol.org/docs/spec/core) sets out how blocks should be defined, how services are defined, how embedding applications should initialize blocks, and _how_ applications and blocks communicate.
+The [core specification](https://blockprotocol.org/docs/spec/core) sets out how blocks should be defined, how modules are defined, how embedding applications should initialize blocks, and _how_ applications and blocks communicate.
 
-Each **service specification** defines _what_ applications and blocks communicate. A service is a logical grouping of messages blocks and applications may exchange.
+Each **module specification** defines _what_ applications and blocks communicate. A module is a logical grouping of messages blocks and applications may exchange.
 
 Each specification is versioned separately, allowing them to evolve independently.
 Any reference to the ‘protocol version’ should be read as _the version of the core specification_.
 
-Separate core and service specifications were introduced in version 0.2 of the Block Protocol.
+Separate core and module specifications were introduced in version 0.2 of the Block Protocol.
 
 ### Overview
 
