--- a/apps/site/src/_pages/docs/4_spec/03_hook-module.mdx
+++ b/apps/site/src/_pages/docs/4_spec/03_hook-module.mdx
@@ -1,17 +1,17 @@
-# Hook Service
+# Hook Module
 
-This document (version 0.1) defines a **hook service** according to the terms set out in the [core specification](https://blockprotocol.org/docs/spec/core).
+This document (version 0.1) defines a **hook module** according to the terms set out in the [core specification](https://blockprotocol.org/docs/spec/core).
 
-Under the hook service, a block can invite embedding application to take over the rendering of an element within the block (the **hook**), allowing embedding applications to provide users with application-specific **views** of specific data types without the block needing to know about them.
+Under the hook module, a block can invite embedding application to take over the rendering of an element within the block (the **hook**), allowing embedding applications to provide users with application-specific **views** of specific data types without the block needing to know about them.
 
-The service is designed to meet the following aims:
+The module is designed to meet the following aims:
 
 - embedding applications providing a consistent 'look and feel' across blocks for displaying or editing values of a particular type (e.g. rich text or image editing)
 - allowing blocks to be portable across applications which use bespoke systems or data structures for displaying or editing values of a particular type (e.g. there is no universal “rich text” representation for blocks to parse and produce)
 
-The service meets these aims by allowing blocks to delegate visualizing and editing functionality upwards to the embedding application.
+The module meets these aims by allowing blocks to delegate visualizing and editing functionality upwards to the embedding application.
 
-The hook service is dependent on [the graph service](https://blockprotocol.org/docs/spec/graph-service), as it relies on the existence of **entities** – use of the graph service is a prerequisite for use of the hook service.
+The hook module is dependent on [the graph module](https://blockprotocol.org/docs/spec/graph-module), as it relies on the existence of **entities** – use of the graph module is a prerequisite for use of the hook module.
 
 ## Glossary
 
@@ -27,7 +27,7 @@ Blocks initiate hooks by asking embedding applications to take over a DOM node (
 
 ### <Hidden>Establishing hooks </Hidden>Specification
 
-To request a view is rendered into a hook, a block MUST send a `hook` [message](https://www.notion.so/Hook-service-spec-1fcc185dc67c4ce7ace06878a144977d). The value for `hookId` MUST be `null` when a block first establishes a hook.
+To request a view is rendered into a hook, a block MUST send a `hook` [message](https://www.notion.so/Hook-module-spec-1fcc185dc67c4ce7ace06878a144977d). The value for `hookId` MUST be `null` when a block first establishes a hook.
 
 If the embedding application **supports** the requested hook type:
 
@@ -90,7 +90,7 @@ Applications should still provide the relevant data to the block, and should ens
 
 Embedding applications MUST use any value under the specified `path` in the properties in the specified entity to initialise the view they render.
 
-As per the graph specification, embedding applications MUST provide a valid value for the specified `path` for any entity when sending data to the block. This may involve a different representation of the data than the application stores. For example, if an entity type specifies `type: "string"` for a property, and the application has stored data on that property as complex rich text objects (owing to previous or current use of the hook service for that property, or for some reason), the application MUST translate those rich text objects into a simple string when sending the property to the block, in order for the data send to comply with the entity schema.
+As per the graph specification, embedding applications MUST provide a valid value for the specified `path` for any entity when sending data to the block. This may involve a different representation of the data than the application stores. For example, if an entity type specifies `type: "string"` for a property, and the application has stored data on that property as complex rich text objects (owing to previous or current use of the hook module for that property, or for some reason), the application MUST translate those rich text objects into a simple string when sending the property to the block, in order for the data send to comply with the entity schema.
 
 ## Hook types
 
@@ -98,7 +98,7 @@ As per the graph specification, embedding applications MUST provide a valid valu
 
 The type of a hook request indicates the type of data the block is requesting a view to be rendered for. The specification permits any string, but we expect particular use to be made of `text`, and to a lesser extent `image` and `video`.
 
-As an example, take `text`. The data structure for formatted text may be bespoke to the embedding application, and impossible for the block to predictably parse or generate. The expected text editing experience may involve custom formatting controls, or special inline actions or commands. By using the hook service to inject its own rich text editing input, an embedding application can provide the desired experience and functionality.
+As an example, take `text`. The data structure for formatted text may be bespoke to the embedding application, and impossible for the block to predictably parse or generate. The expected text editing experience may involve custom formatting controls, or special inline actions or commands. By using the hook module to inject its own rich text editing input, an embedding application can provide the desired experience and functionality.
 
 ### <Hidden>Hook types </Hidden>Specification
 
@@ -110,11 +110,11 @@ Embedding applications MUST render an appropriate view for the specified type, i
 
 ### <Hidden>Message definitions </Hidden>Summary
 
-There are only two messages in the hook service: the `hook` request from the block, and the `hookResponse` acknowledgement from the embedding application.
+There are only two messages in the hook module: the `hook` request from the block, and the `hookResponse` acknowledgement from the embedding application.
 
 ### <Hidden>Message definitions </Hidden>Specification
 
-The messages available for exchange in the hook service are defined in the [service's JSON definition](https://github.com/blockprotocol/blockprotocol/blob/main/libs/%40blockprotocol/hook/src/hook-service.json#L5) and are also
+The messages available for exchange in the hook module are defined in the [module's JSON definition](https://github.com/blockprotocol/blockprotocol/blob/main/libs/%40blockprotocol/hook/src/hook-module.json#L5) and are also
 listed below for ease of reference.
 
-<HookServiceMessageList />
+<HookModuleMessageList />
